--- a/syllabus-1.Rmd
+++ b/syllabus-1.Rmd
@@ -6,7 +6,7 @@ output: html_document
 EPID 722 Course plan:
 
 
-| Date          | Topic (readings)                    |                   |
+| Date          | Topic (readings --refer to list at bottom of page)                    |                   |
 |---------------|-------------------------------------|-------------------|
 | Tuesday 1/12  | Course preview and Risk (1)         | Brookhart/Cole    |
 | Thursday 1/14 | Counterfactuals, design and confounding | Brookhart         |
@@ -43,3 +43,17 @@ EPID 722 Course plan:
 <sup>1</sup> Open sessions will be used to cover advanced topics<sup>2</sup>, and accommodate snow days if needed.
 
 <sup>2</sup> List of advanced topics include: covariate/model choice, generalizability, instrumental variables, measurement error, structural nested models.
+
+Readings
+
+1.	Cole SR, Hudgens MG, Brookhart MA, et al. Risk. Am J Epidemiol 2015;181(4):246-250.
+2.	Cole SR, Chu H, Greenland S. Maximum likelihood, profile likelihood, and penalized likelihood: a primer. Am J Epidemiol 2014;179(2):252-260.
+3.	Cole SR, Chu H, Greenland S, et al. Bayesian posterior distributions without markov chains. Am J Epidemiol 2012;175(5):368-375.
+4.	Cole SR, Hudgens MG. Survival analysis in infectious disease research: describing events in time. AIDS 2010;24(16):2423-2431.
+5.	Cole SR, Hernán MA. Adjusted survival curves with inverse probability weights. Comput Methods Programs Biomed 2004;75(1):45-49.
+6.	Buchanan AL, Hudgens MG, Cole SR, et al. Worth the weight: using inverse probability weighted cox models in AIDS research. AIDS Res Hum Retroviruses 2014;30(12):1170-1177.
+7.	Cole SR, Stuart EA. Generalizing evidence from randomized clinical trials to target populations: The ACTG 320 trial. Am J Epidemiol 2010;172(1):107-115.
+8.	Greenland S, Finkle WD. A critical look at methods for handling missing covariates in epidemiologic regression analyses. Am J Epidemiol 1995;142(12):1255-1264.
+
+
+
