--- a/syllabus-1.Rmd
+++ b/syllabus-1.Rmd
@@ -46,9 +46,9 @@ EPID 722 Course plan:
 
 ---
 
-**Readings**
+**Readings***
 
-    Cole SR, Hudgens MG, Brookhart MA, et al. Risk. Am. J. Epidemiol. [electronic article]. 2015;181(4):246–250. (http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwv001).
+Cole SR, Hudgens MG, Brookhart MA, et al. Risk. Am. J. Epidemiol. [electronic article]. 2015;181(4):246–250. (http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwv001).
     
     Cole SR, Chu H, Greenland S. Maximum Likelihood, Profile Likelihood, and Penalized Likelihood: A Primer. Am. J. Epidemiol. [electronic article]. 2014;179(2):252–260. (http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwt245).
     
