--- a/syllabus-1.Rmd
+++ b/syllabus-1.Rmd
@@ -1,26 +1,28 @@
 ---
 title: "EPID 722 Course plan"
 output: html_document
+csl: american-journal-of-epidemiology.csl
+bibliography: bib1.bib
 ---
 
 EPID 722 Course plan:
 
 
-| Date          | Topic (readings --refer to list at bottom of page)                    |                   |
+| Date          | Topic (readings --refer to list at bottom of page)                    | Professor                  | 
 |---------------|-------------------------------------|-------------------|
-| Tuesday 1/12  | Course preview and Risk (1)         | Brookhart/Cole    |
-| Thursday 1/14 | Counterfactuals, design and confounding | Brookhart         |
-| Tuesday 1/19  | IP-weighting and propensity scores    | Brookhart         |
-| Thursday 1/21 | The g formula  | Brookhart         |
+| Tuesday 1/12  | Course preview and Risk [@cole_risk_2015]         | Brookhart/Cole    |
+| Thursday 1/14 | Counterfactuals, design and confounding [@brookhart_confounding_2010;@brookhart_counterpoint_2015;@ray_evaluating_2003] | Brookhart         |
+| Tuesday 1/19  | IP-weighting and propensity scores     | Brookhart         |
+| Thursday 1/21 | The g formula [@snowden_implementation_2011] | Brookhart         |
 | Tuesday  1/26 | Simulation                       | Brookhart         |
 | Thursday 1/28 | Bootstrap                           | Brookhart         |
-| Tuesday 2/2   | Maximum likelihood (2)       | Cole              |
-| Thursday 2/4  | Bayesian inference (3)      | Cole              |
-| Tuesday 2/9   | Survival functions (4)         | Cole              |
-| Thursday 2/11 | IP-weighted survival functions (5)  | Cole         |
-| Tuesday 2/16  | IP-weighted Cox models (6)                       | Cole              |
-| Thursday 2/18 | Generalizability (7)             | Cole              |
-| Tuesday 2/23  | Missing data (8)        | Cole              |
+| Tuesday 2/2   | Maximum likelihood [@cole_maximum_2014]       | Cole              |
+| Thursday 2/4  | Bayesian inference [@cole_bayesian_2012]      | Cole              |
+| Tuesday 2/9   | Survival functions [@cole_survival_2010]         | Cole              |
+| Thursday 2/11 | IP-weighted survival functions [@cole_adjusted_2004-1]  | Cole         |
+| Tuesday 2/16  | IP-weighted Cox models [@buchanan_worth_2014]                       | Cole              |
+| Thursday 2/18 | Generalizability [@cole_generalizing_2010]             | Cole              |
+| Tuesday 2/23  | Missing data [@greenland_critical_1995-1]        | Cole              |
 | Thursday 2/25 | Smoothing and splines | Brookhart              |
 | Tuesday 3/1   | Open session<sup>1</sup>                       | TBN               |
 | Thursday 3/3  | Exam preview                        | Brookhart/Cole    |
@@ -46,20 +48,4 @@ EPID 722 Course plan:
 
 ---
 
-***Readings***
-
-1. Cole SR, Hudgens MG, Brookhart MA, et al. Risk. Am. J. Epidemiol. [electronic article]. 2015;181(4):246–250. (http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwv001).
-    
-2. Cole SR, Chu H, Greenland S. Maximum Likelihood, Profile Likelihood, and Penalized Likelihood: A Primer. Am. J. Epidemiol. [electronic article]. 2014;179(2):252–260. (http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwt245).
-    
-3. Cole SR, Chu H, Greenland S, et al. Bayesian Posterior Distributions Without Markov Chains. Am. J. Epidemiol. [electronic article]. 2012;175(5):368–375. (http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwr433).
-    
-4. Cole SR, Stuart EA. Generalizing Evidence From Randomized Clinical Trials to Target Populations: The ACTG 320 Trial. Am. J. Epidemiol. [electronic article]. 2010;172(1):107–115. (http://aje.oxfordjournals.org/cgi/doi/10.1093/aje/kwq084).
-    
-5. Cole SR, Hernán MA. Adjusted survival curves with inverse probability weights. Comput. Methods Programs Biomed. [electronic article]. 2004;75(1):45–49. (http://linkinghub.elsevier.com/retrieve/pii/S0169260703001378).
-    
-6. Buchanan AL, Hudgens MG, Cole SR, et al. Worth the Weight: Using Inverse Probability Weighted Cox Models in AIDS Research. AIDS Res. Hum. Retroviruses [electronic article]. 2014;30(12):1170–1177. (http://online.liebertpub.com/doi/abs/10.1089/aid.2014.0037).
-    
-7. Cole SR, Hudgens MG. Survival analysis in infectious disease research: Describing events in time: AIDS [electronic article]. 2010;24(16):2423–2431. (http://content.wkhealth.com/linkback/openurl?sid=WKPTLP:landingpage&an=00002030-201010230-00001).
-    
-8. Greenland S, Finkle WD. A critical look at methods for handling missing covariates in epidemiologic regression analyses. Am. J. Epidemiol. 1995;142(12):1255–1264.
+**References**
