--- a/syllabus-1.Rmd
+++ b/syllabus-1.Rmd
@@ -6,11 +6,11 @@ bibliography: bib1.bib
 ---
 
 
-| Date          | Topic (readings --refer to list at bottom of page)                    | Professor                  | 
+| Date          | Topic (readings -- refer to list at bottom of page)                    | Professor                  | 
 |---------------|-------------------------------------|-------------------|
 | Tuesday 1/12  | Course preview and Risk [@cole_risk_2015]         | Brookhart/Cole    |
-| Thursday 1/14 | Counterfactuals, design and confounding [@brookhart_confounding_2010;@brookhart_counterpoint_2015;@ray_evaluating_2003] | Brookhart         |
-| Tuesday 1/19  | IP-weighting and propensity scores     | Brookhart         |
+| Thursday 1/14 | Counterfactuals, design and confounding [@brookhart_confounding_2010;@brookhart_counterpoint:_2015;@ray_evaluating_2003] | Brookhart         |
+| Tuesday 1/19  | IP-weighting and propensity scores [@westreich_invited_2010;@lunceford_stratification_2004;@kurth_results_2005;@funk_doubly_2011]     | Brookhart         |
 | Thursday 1/21 | The g formula [@snowden_implementation_2011] | Brookhart         |
 | Tuesday  1/26 | Simulation                       | Brookhart         |
 | Thursday 1/28 | Bootstrap                           | Brookhart         |
