--- a/syllabus-1.Rmd
+++ b/syllabus-1.Rmd
@@ -9,9 +9,9 @@ bibliography: bib1.bib
 | Date          | Topic (readings -- refer to list at bottom of page)                    | Professor                  | 
 |---------------|-------------------------------------|-------------------|
 | Tuesday 1/12  | Course preview and Risk [@cole_risk_2015]         | Brookhart/Cole    |
-| Thursday 1/14 | Counterfactuals, design and confounding [@brookhart_confounding_2010;@brookhart_counterpoint_2015;@ray_evaluating_2003] | Brookhart         |
+| Thursday 1/14 | Counterfactuals, design and confounding [@brookhart_confounding_2010;@brookhart_counterpoint:_2015;@ray_evaluating_2003] | Brookhart         |
 | Tuesday 1/19  | The g formula [@snowden_implementation_2011; @petersen_assessing_2006; @rose_rose_2011; @vansteelandt_invited_2011]    | Brookhart         |
-| Thursday 1/21 | IP-weighting and propensity scores [@westreich_invited_2010;@lunceford_stratification_2004;@kurth_results_2005;@funk_doubly_2011]  | Brookhart         |
+| Thursday 1/21 | IP-weighting and propensity scores [@austin_introduction_2011; @brookhart_propensity_2013; @lunceford_stratification_2004; @rosenbaum_reducing_1984]  | Brookhart         |
 | Tuesday  1/26 | Simulation                       | Brookhart         |
 | Thursday 1/28 | Bootstrap                           | Brookhart         |
 | Tuesday 2/2   | Maximum likelihood [@cole_maximum_2014]       | Cole              |
