--- a/syllabus-1.Rmd
+++ b/syllabus-1.Rmd
@@ -22,10 +22,10 @@ bibliography: bib1.bib
 | Thursday 2/18 | Generalizability [@cole_generalizing_2010]             | Cole              |
 | Tuesday 2/23  | Missing data [@greenland_critical_1995]        | Cole              |
 | Thursday 2/25 | Smoothing and splines | Brookhart              |
-| Tuesday 3/1   | Open session<sup>1</sup>                       | TBN               |
-| Thursday 3/3  | Exam preview                        | Brookhart/Cole    |
-| Tuesday 3/8   | Exam                                |                   |
-| Thursday 3/10 | Exam review                         | Brookhart/Cole    |
+| Tuesday 3/1   | Exam preview                       | Brookhart/Cole            |
+| Thursday 3/3  | Exam                        |     |
+| Tuesday 3/8   | Exam review                   | Brookhart/Cole         |
+| Thursday 3/10 | Open Session<sup>1</sup>                        | Brookhart/Cole    |
 | SPRING        |                                     |                   |
 | BREAK         |                                     |                   |
 | Tuesday 3/22  | Project                             |                   |
