--- a/syllabus-1.Rmd
+++ b/syllabus-1.Rmd
@@ -11,21 +11,13 @@ bibliography: bib1.bib
 | Tuesday 1/12  | Course preview and Risk [@cole_risk_2015]         | Brookhart/Cole    |
 | Thursday 1/14 | Counterfactuals, design and confounding [@brookhart_confounding_2010;@brookhart_counterpoint:_2015;@ray_evaluating_2003] | Brookhart         |
 | Tuesday 1/19  | The g formula [@snowden_implementation_2011; @petersen_assessing_2006; @rose_rose_2011; @vansteelandt_invited_2011]    | Brookhart         |
-| Thursday 1/21 | IP-weighting and propensity scores [@austin_introduction_2011; @brookhart_propensity_2013; @lunceford_stratification_2004; @rosenbaum_reducing_1984]  | Brookhart         |
-| Tuesday  1/26 | Simulation                       | Brookhart         |
-| Thursday 1/28 | Bootstrap                           | Brookhart         |
-| Tuesday 2/2   | Maximum likelihood [@cole_maximum_2014]       | Cole              |
-| Thursday 2/4  | Bayesian inference [@cole_bayesian_2012]      | Cole              |
-| Tuesday 2/9   | Survival functions [@cole_survival_2010]         | Cole              |
-| Thursday 2/11 | IP-weighted survival functions [@cole_adjusted_2004]  | Cole         |
-| Tuesday 2/16  | IP-weighted Cox models [@buchanan_worth_2014]                       | Cole              |
-| Thursday 2/18 | Generalizability [@cole_generalizing_2010]             | Cole              |
-| Tuesday 2/23  | Missing data [@greenland_critical_1995]        | Cole              |
-| Thursday 2/25 | Smoothing and splines | Brookhart              |
+| Thursday 1/21 | The g formula, cont. | Brookhart |
+| Tuesday 1/26 | IP-weighting and propensity scores [@austin_introduction_2011; @brookhart_propensity_2013; @lunceford_stratification_2004; @rosenbaum_reducing_1984]  | Brookhart         |
+|$\ldots$ | | |
 | Tuesday 3/1   | Exam preview                       | Brookhart/Cole            |
 | Thursday 3/3  | Exam                        |     |
 | Tuesday 3/8   | Exam review                   | Brookhart/Cole         |
-| Thursday 3/10 | Open Session<sup>1</sup>                        | Brookhart/Cole    |
+| Thursday 3/10 | Open Session<sup>1</sup>          | Brookhart/Cole    |
 | SPRING        |                                     |                   |
 | BREAK         |                                     |                   |
 | Tuesday 3/22  | Project                             |                   |
@@ -39,6 +31,22 @@ bibliography: bib1.bib
 | Tuesday 4/19  | Project                             |                   |
 | Thursday 4/21 | Open session<sup>1</sup>                       | TBN, Abstract due |
 | Tuesday 4/26  | Course review                       |                   |
+
+
+
+<!--
+| Tuesday  1/26? | Simulation                       | Brookhart         |
+| Thursday 1/28? | Bootstrap                           | Brookhart         |
+| Tuesday 2/2?   | Maximum likelihood [@cole_maximum_2014]       | Cole              |
+| Thursday 2/7?  | Bayesian inference [@cole_bayesian_2012]      | Cole              |
+| Tuesday 2/9?   | Survival functions [@cole_survival_2010]         | Cole              |
+| Thursday 2/11? | IP-weighted survival functions [@cole_adjusted_2004]  | Cole         |
+| Tuesday 2/16?  | IP-weighted Cox models [@buchanan_worth_2014]                       | Cole              |
+| Thursday 2/18? | Generalizability [@cole_generalizing_2010]             | Cole              |
+| Tuesday 2/23?  | Missing data [@greenland_critical_1995]        | Cole              |
+| Thursday 2/25? | Smoothing and splines | Brookhart              |
+-->
+
 
 <sup>1</sup> Open sessions will be used to cover advanced topics<sup>2</sup>, and accommodate snow days if needed.
 
